fix: update XBC download link to XBC m31 update 2 build, XBC  v.2.8.1607.1952 fix: wrong background position for "Getting started from ZIP files" download button

--- a/css/quickstart.css
+++ b/css/quickstart.css
@@ -141,11 +141,11 @@ button {
 }
 
 #download:hover {
-  background-position-y: -47px;
+  background-position-y: -60px;
 }
 
 #download:active {
-  background-position-y: -94px;
+  background-position-y: -120px;
 }
 
 #download {
